2012-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Module loading is now only supported by the
	modules build and not just because shared libraries are enabled.
	This means that libltdl is only depended upon by the modules
	build.  Sometime in the future, libltdl will no longer be bundled
	in the GraphicsMagick source tree.

2012-10-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac (LTDL_INIT): Request installable libltdl rather
	than convenience.

2012-10-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c: Support alpha channel in uncompressed 32-bit BMP.
	Resolves SourceForge issue 3566239 "Can't open BMP with alpha
	created by photoshop".

2012-10-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* dcraw/dcraw.c: Fixed situation when M_PI is not defined.

2012-10-07  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/jnx.c: Add image attribute with geolocation.

2012-10-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw: VisualMagick configure fixes to support linking with JPEG
	and JPEG2000.

2012-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw: Add dcraw to VisualMagick build.

	* libxml: Update libxml2 to 2.9.0 release.

2012-09-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tiff: Update libtiff to 4.0.3 release.

	* lcms: Update liblcms2 to 2.4 release.

	* png: Update libpng to 1.5.13 release.

2012-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Update to Automake 1.12.4.

2012-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Fix Debian bug 687738 "graphicsmagick:
	repeated words suitable for suitable for in gm manpage" reported
	by Jonas Smedegaard.

2012-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update with news since last release.

	* configure.ac: Added the configure option
	--enable-quantum-library-names to enable that shared library name