@@ -39,6 +39,8 @@
 <p>2012-10-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/jnx.c: Fix format string compilation warnings.  Remove
+MS-DOS line terminations.</li>
 <li>configure.ac: Module loading is now only supported by the
 modules build and not just because shared libraries are enabled.
 This means that libltdl is only depended upon by the modules
